# omocha

./: .gitignore  LICENSE  omocha.cabal
rust-bits/: Cargo.toml
rust-bits/src/: lib.rs  proof_of_work.rs  signature.rs
src/: Main.hs
src/Crypto/: Signature.hs  Work.hs
test/: Test.hs
