cabal-version:      2.4
name:               omocha
version:            0.0.0.0

synopsis: A toy blockchain.
license:            MIT
author:             Lúcás Críostóir Meier
maintainer:         lucas@cronokirby.com

extra-source-files: CHANGELOG.md

executable omocha
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
