[package]
name = "omocha-rust-bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "omocha_rust_bits"
crate-type = ["staticlib"]

[dependencies]
blake3 = "1.3.1"
curve25519-dalek = "3.2.1"
rand_core = "0.5.1"
subtle = "2.4.1"
